# LFT

./: 1_Estimate_Pi.ipynb
Ising Model/: algorithms.py  base_simulation.py  cluster_algorithms.py  ising_model_physics.py  my_logging.py  theory.py
Pure Gauge Theory/: main.ipynb
Pure Gauge Theory/gauge_theory/: Cargo.toml
Pure Gauge Theory/gauge_theory/src/: lib.rs
Pure Gauge Theory/gauge_theory/src/lattice/: base.rs  mod.rs  su2.rs  su3.rs
Pure Gauge Theory/gauge_theory/src/observables/: plaquette.rs
Specialist Course/: 2_Metropolis.ipynb  3_Autocorrelation.ipynb  4_Scalar1D.ipynb  5_Phi4_2D.ipynb  6_Fermions.ipynb
