[package]
name = "gauge_theory"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
num-complex = "0.4.6"
pyo3 = { version = "0.27.1", features = ["extension-module"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
